2010-04-20  Emanuel Schütze <emanuel@intevation.de>

	* po/de.po: Use "pruefen" instead "ueberpruefen" for signatures.

2010-01-08  Marcus Brinkmann  <marcus@g10code.de>

	* Release 0.9.5.

2009-12-26  Marcus Brinkmann  <marcus@g10code.de>

	* Release 0.9.4.

2009-08-04  Marcus Brinkmann  <marcus@g10code.de>

	* doc/gpgex-en.html, doc/gpgex-de.html: Add link to Kleo manual.

2009-07-31  Emanuel Schütze <emanuel@intevation.de>

	* doc/gpgex-de.html, doc/gpgex-en.html: Remove checksum text,
	improve documentation for debug message.

2009-03-24  Werner Koch  <wk@g10code.com>

	Release 0.9.3.

2009-03-10  Marcus Brinkmann  <marcus@g10code.de>

	* po/de.po, po/es.po, po/ru.po, po/ar.po: Change encrypt&sign to
	sign&encrypt everywhere.

2009-01-28  Werner Koch  <wk@g10code.com>

	Release 0.9.2.

2009-01-22  Werner Koch  <wk@g10code.com>

	* po/de.po: Change "verifizeren" to "überprüfen".

2008-06-04  Werner Koch  <wk@g10code.com>

	* doc/gpgex.texi (Assuan Protocol): Replace the spec by a
	reference to the gpgme manual.

2008-03-26  Marcus Brinkmann  <marcus@g10code.de>

	Released 0.9.0.

	* po/LINGUAS: Add ar, es, ru.

	* Makefile.am (AUTOMAKE_OPTIONS): Add no-dist-gzip.

	* configure.ac: Prepare for release of 0.9.0.

	* po/ar.po, po/es.po, po/ru.po: New files.
	* po/de.po: Fix newline.

2007-11-26  Marcus Brinkmann  <marcus@g10code.de>

	* doc/gpgex-de.html, doc/gpgex-en.html: Add FIXME entries for
	missing hyperlinks.

2007-11-12  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (WINVER): New symbol.

2007-11-08  Marcus Brinkmann  <marcus@g10code.de>

	* po/de.po: Update.

	* doc/gpgex-de.html, doc/gpgex-en.html: New files.
	* doc/Makefile.am (dist_doc_DATA): New variable.

	* doc/gpgex.texi: Complete protocol change from INPUT FILE to
	FILE.  Also from IMPORT to IMPORT_FILES.

2007-11-02  Werner Koch  <wk@g10code.com>

	* autogen.sh: Add --force option.

	* doc/gpgex.texi: Protocol change s/"INPUT FILE"/"FILE"/.
