@@ -1,3 +1,9 @@
+2010-04-20  Marcus Brinkmann  <marcus@g10code.de>
+
+	* client.cc (getinfo_pid_cb): Return gpg_error_t.
+	(uiserver_connect): Port to new assuan interface.
+	* main.cc (DllMain): Likewise.
+
 2010-02-10  Marcus Brinkmann  <marcus@g10code.de>
 
 	* gpgex.cc (gpgex_t::Initialize): Default to sign/encrypt if a
