@@ -1,3 +1,9 @@
+2010-04-20  Marcus Brinkmann  <marcus@g10code.de>
+
+	* configure.ac: Bump version to 0.9.6.
+	(NEED_LIBASSUAN_API): Bump to 2.
+	(NEED_LIBASSAUN_VERSION): Bump to 2.0.0.
+
 2010-04-20  Emanuel Schütze <emanuel@intevation.de>
 
 	* po/de.po: Use "pruefen" instead "ueberpruefen" for signatures.
